# unnamed-foss-os-repo

./: CMakeLists.txt  README.md
Boot/Limine/: limine.cfg
Kernel/: boot.c  kernel.h
Scripts/: mkBuild.sh  mkISO.sh
Targets/x86-64/: linker.ld
